--- a/project-9-web-app/server/package.json
+++ b/project-9-web-app/server/package.json
@@ -1,14 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "firebase-admin": "^13.0.1"
-  },
+  "type": "module",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "firebase-admin": "^13.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
