--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "pm2 start app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "firebase-admin": "^13.0.1"
+    "firebase-admin": "^13.0.1",
+    "pm2": "^5.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
